# simpeg

./: README.rst  pyproject.toml  setup.py
SimPEG/electromagnetics/time_domain/: sources.py
simpeg_archive/: DataMisfit.py  Directives.py  Fields.py  InvProblem.py  Inversion.py  Maps.py  ObjectiveFunction.py  Optimization.py  Problem.py  Props.py  Regularization.py  Survey.py  Tests.py  __init__.py
simpeg_archive/Mesh/: MeshIO.py
simpeg_archive/PF/: BaseGrav.py  BaseMag.py  GravAnalytics.py  Gravity.py  GravityDriver.py  MagAnalytics.py  Magnetics.py  MagneticsDriver.py
simpeg_archive/Utils/: io_utils.py
simpeg_archive/simpegEM1D/: DigFilter.py  EM1D.py  EM1DAnalytics.py  EM1DSimulation.py  GlobalEM1D.py  IO.py  Regularization.py  Survey.py
simpeg_archive/utils/: ModelBuilder.py  PlotUtils.py  __init__.py  codeutils.py  modelutils.py  printinfo.py
tests/em/tdem/: test_TDEM_forward_Analytic.py
